exports[`test appends with classes 1`] = `
<div className="test-container" style={{...}}>
<input className="toggle-switch one two" styles={{...}} type="checkbox" name="switch-1" id="switch-1" onChange={[Function]} checked={true} />
<label htmlFor="switch-1" className="float-right" />
</div>
`;

exports[`test overrides with name 1`] = `
<div className="test-container" style={{...}}>
<input className="toggle-switch" styles={{...}} type="checkbox" name="my name" id="switch-1" onChange={[Function]} checked={true} />
<label htmlFor="switch-1" className="float-right" />
</div>
`;

exports[`test overrides with theme 1`] = `
<div className="test-container" style={{...}}>
<input className="my theme" styles={{...}} type="checkbox" name="switch-1" id="switch-1" onChange={[Function]} checked={true} />
<label htmlFor="switch-1" className="float-right" />
</div>
`;

exports[`test renders with props 1`] = `
<div className="test-container" style={{...}}>
<input className="toggle-switch" styles={{...}} type="checkbox" name="switch-1" id="switch-1" onChange={[Function]} checked={true} />
<label htmlFor="switch-1" className="float-right" />
</div>
`;

exports[`test renders with styles 1`] = `
<div className="test-container" style={{...}}>
<input className="toggle-switch" styles={{...}} type="checkbox" name="switch-1" id="switch-1" onChange={[Function]} checked={true} />
<label htmlFor="switch-1" className="float-right" />
</div>
`;
